<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Infection</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_game_finished">GameFinishedActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="gametitle">Infection</string>
    <string name="restartbuttonlabel">Restart</string>
    
    <string name="quickgamebuttonlabel">Quick Game</string>
    <string name="settingsbuttonlabel">Settings</string>
    <string name="exitbuttonlabel">Exit</string>
    
    <string name="easybuttonlabel">Easy</string>
    <string name="normalbuttonlabel">Normal</string>
    <string name="hardbuttonlabel">Hard</string>
    
    <string name="mainmenubuttonlabel">Home</string>
    <string name="outcometextlabel">GAME OVER</string>

    <string name="gamewonmessage">Victory!</string>
    <string name="gamelostmessage">Defeat</string>    
</resources>