<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/main_menu_top_padding"
    tools:context=".MainMenuActivity"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/gametitletext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/Transparent"
        android:paddingBottom="@dimen/main_menu_title_bottom_padding"
        android:textColor="@color/White"
        android:textSize="@dimen/title_text_size" 
        android:gravity="center"
        android:text="@string/gametitle" /> 
    
    <LinearLayout
	    android:id="@+id/quickgamebutton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
       	android:gravity="center"
       	android:layout_marginBottom="@dimen/menu_item_spacing"
	    android:orientation="horizontal" >
	
		<TextView
	        android:id="@+id/quickgamebuttontext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
        	android:background="@color/Transparent"
        	android:textSize="@dimen/menu_item_size"
        	android:textColor="@color/White"
        	android:layout_marginRight="@dimen/menu_to_icon_spacing"
	        android:text="@string/quickgamebuttonlabel"/> 
		
		<ImageView
		    android:id="@+id/playgameimage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:adjustViewBounds="true"  
        	android:background="@color/Transparent"
			android:maxWidth="@dimen/menu_item_size"  
			android:maxHeight="@dimen/menu_item_size"   
		    android:scaleType="fitCenter"  
		    android:src="@drawable/play_btn"/>
	
    </LinearLayout>   
    
    <LinearLayout
	    android:id="@+id/settingsbutton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
       	android:gravity="center"
       	android:layout_marginBottom="@dimen/menu_item_spacing" 
	    android:orientation="horizontal" >
	
		<TextView
	        android:id="@+id/settingsbuttontext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
        	android:textSize="@dimen/menu_item_size"
        	android:textColor="@color/White"
        	android:background="@color/Transparent"
        	android:layout_marginRight="@dimen/menu_to_icon_spacing"
	        android:text="@string/settingsbuttonlabel"/> 
		
		<ImageView
		    android:id="@+id/settingsbuttonimage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:adjustViewBounds="true"  
        	android:background="@color/Transparent"
			android:maxWidth="@dimen/menu_item_size"  
			android:maxHeight="@dimen/menu_item_size"   
		    android:scaleType="fitCenter"  
		    android:src="@drawable/settings_btn"/>
    </LinearLayout>  
	
   	<LinearLayout
	    android:id="@+id/difficultysettingsframe"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
       	android:gravity="center"
       	android:visibility="gone"
	    android:orientation="vertical" >	
	    
		<LinearLayout
		    android:id="@+id/easybutton"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
	       	android:gravity="center"
	       	android:layout_marginBottom="@dimen/menu_sub_item_spacing"
		    android:orientation="horizontal" >
		
			<TextView
		        android:id="@+id/easybuttontext"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
        		android:background="@color/Transparent"
	        	android:textSize="@dimen/menu_sub_item_size"
	        	android:textColor="@color/White"
		        android:text="@string/easybuttonlabel"/> 
			
			<ImageView
			    android:id="@+id/easybuttonimage"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
        		android:background="@color/Transparent"
				android:adjustViewBounds="true"  
				android:maxWidth="@dimen/menu_sub_item_size"  
				android:maxHeight="@dimen/menu_sub_item_size"   
			    android:scaleType="fitCenter"  
			    android:src="@drawable/easy_btn"/> 
		
	    </LinearLayout> 
	    
		<LinearLayout
		    android:id="@+id/normalbutton"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
	       	android:gravity="center"
	       	android:layout_marginBottom="@dimen/menu_sub_item_spacing"
		    android:orientation="horizontal" >
		
			<TextView
		        android:id="@+id/normalbuttontext"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
        		android:background="@color/Transparent"
	        	android:textSize="@dimen/menu_sub_item_size"
	        	android:textColor="@color/White"
		        android:text="@string/normalbuttonlabel"/> 
			
			<ImageView
			    android:id="@+id/normalbuttonimage"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:adjustViewBounds="true"  
        		android:background="@color/Transparent"
				android:maxWidth="@dimen/menu_sub_item_size"  
				android:maxHeight="@dimen/menu_sub_item_size"   
			    android:scaleType="fitCenter"  
			    android:src="@drawable/normal_btn"/> 
		
	    </LinearLayout> 
	    
		<LinearLayout
		    android:id="@+id/hardbutton"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
	       	android:gravity="center"
	       	android:layout_marginBottom="@dimen/menu_sub_item_spacing"
		    android:orientation="horizontal" >
		
			<TextView
		        android:id="@+id/hardbuttontext"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
        		android:background="@color/Transparent"
	        	android:textSize="@dimen/menu_sub_item_size"
	        	android:textColor="@color/White"
		        android:text="@string/hardbuttonlabel"/> 
			
			<ImageView
			    android:id="@+id/hardbuttonimage"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
        		android:background="@color/Transparent"
				android:adjustViewBounds="true"  
				android:maxWidth="@dimen/menu_sub_item_size"  
				android:maxHeight="@dimen/menu_sub_item_size"   
			    android:scaleType="fitCenter"  
			    android:src="@drawable/hard_btn"/> 
		
	    </LinearLayout>
     
    </LinearLayout>
     <LinearLayout
	    android:id="@+id/exitbutton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
       	android:gravity="center"
       	android:layout_marginBottom="@dimen/menu_item_spacing" 
	    android:orientation="horizontal" >
	
		<TextView
	        android:id="@+id/exitbuttontext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
        	android:textSize="@dimen/menu_item_size"
        	android:textColor="@color/White"
        	android:background="@color/Transparent"
        	android:layout_marginRight="@dimen/menu_to_icon_spacing"
	        android:text="@string/exitbuttonlabel"/> 
		
		<ImageView
		    android:id="@+id/exitbuttonimage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:adjustViewBounds="true"  
        	android:background="@color/Transparent"
			android:maxWidth="@dimen/menu_item_size"  
			android:maxHeight="@dimen/menu_item_size"    
		    android:scaleType="fitCenter"  
		    android:src="@drawable/exit_btn"/> 
    </LinearLayout> 

</LinearLayout>